[gd_scene load_steps=4 format=3 uid="uid://dwpo80tbqmd4j"]

[ext_resource type="Script" uid="uid://7li16rhcyxap" path="res://Test.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://3ey4ti2j780a" path="res://Space/Asteroid.tscn" id="2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rvu7i"]
radius = 57.2713

[node name="Test" type="Node2D"]
script = ExtResource("1")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
visible = false
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(326, 186)
shape = SubResource("CircleShape2D_rvu7i")

[node name="Asteroid" parent="." instance=ExtResource("2")]
unique_name_in_owner = true
position = Vector2(255, 190)

[connection signal="input_event" from="RigidBody2D" to="." method="_on_rigid_body_2d_input_event"]
[connection signal="mouse_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody2D" to="." method="_on_rigid_body_2d_mouse_exited"]
